--- a/Class_1-Assignment_1/styles/style.css
+++ b/Class_1-Assignment_1/styles/style.css
@@ -24,6 +24,9 @@ p {
 
 /* utilities */
 .container {
+    display: flex;
+    flex-direction: row;
+    justify-content:space-around;
     width: 70%;
     margin: 0 auto;
 }
